# gcpath

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/gcpath/: __init__.py  cache.py  cli.py  core.py  formatters.py  loaders.py  parsers.py
tests/: test_cache.py  test_cli.py  test_core.py  test_formatters.py  test_loaders.py  test_loading.py  test_parsers.py
tests/fixtures/: sample_cache_v1.json
